fixing path in CmakeLists and getting the container to run

--- a/CMakelists.txt
+++ b/CMakelists.txt
@@ -2,4 +2,4 @@ cmake_minimum_required(VERSION 3.0)
 
 project(driving-rougelite-game)
 
-add_executable(main main.cpp)
+add_executable(main ./src/main.cpp)
